--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -233,16 +233,41 @@ section ul ul {
 }
 
 /* side bar */
+.sidebar-indicator {
+    position: fixed;
+    top: 50%;
+    left: 0;
+    width: 20px;
+    height: 40px;
+    background-color: var(--berkeley-blue);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 0 5px 5px 0;
+    z-index: 1001;
+    transition: left 0.3s ease-in-out;
+}
+
+.sidebar-indicator span {
+    font-size: 20px;
+}
+
 .sidebar {
     position: fixed;
     top: var(--header-height);
-    left: calc(-1 * var(--sidebar-width));
-    width: var(--sidebar-width);
+    left: -250px;
+    width: 250px;
     height: calc(100vh - var(--header-height));
     background-color: var(--berkeley-blue);
     transition: left 0.3s ease-in-out;
     overflow-y: auto;
     z-index: 999;
+}
+
+.sidebar.open {
+    left: 0;
 }
 
 .sidebar nav {
@@ -262,5 +287,5 @@ section ul ul {
 }
 
 main.sidebar-open {
-    margin-left: var(--sidebar-width);
+    margin-left: 270px;
 }
